--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/car_rental_db
 spring.datasource.username=mikpag
 spring.datasource.password=mikpag
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
